<resources>

    <string name="app_name">Pływalnia Delfinek</string>
	<string name="sample_description">sample</string>
    
    
    <string name="home_intro">Witajcie w aplikacji o pływalni Delfinek</string>
    
    <string name="sample_title">News</string>
    <string name="sample_news">Oto przykładowy news</string>
    <string name="sample_data">dodano: 18.10.2013</string>
    
    
    <string name="share_message">Polecam Ci świetną aplikację o pływani Delfinek! \nSprawdź koniecznie:\n http://www.dolphinsschwimhalle.com</string>
    
    <string name="val">zł</string>
    <string name="term1">PN-PT</string>
    <string name="term2">SB-ND</string>
    
    <string name="short_monday">Pn</string>
    <string name="short_tuesday">Wt</string>
    <string name="short_wensday">Śr</string>
    <string name="short_thursday">Cz</string>
    <string name="short_friday">Pt</string>
    <string name="short_saturday">Sb</string>
    <string name="short_sunday">Nd</string>
    
    <string name="track">Tor</string>
    <string name="Date">Data</string>
    <string name="own">Wył</string>
    <string name="yes">TAK</string>
    <string name="No">Nie</string>
    <string name="myRes">Moje Rezerwacje</string>
    <string name="sure">Czy na pewno chcesz odwołać rezerwację?</string>
    
    <string name="hour">Godzina</string>
    
    <string-array name="week_shorts">
        <item>Pn</item>
        <item>Wt</item>
        <item>Śr</item>
        <item>Cz</item>
        <item>Pt</item>
        <item>Sb</item>
        <item>Nd</item>
    </string-array>
    
    <string name="closed">NIECZYNNE</string>
    <string name="noconection">Błąd połączenia z internetem</string>
    <string name="refresh">Odśwież</string>
    
    <string name="logtores">Zaloguj się by rezerwować</string>
    <string name="logtores_yes">Zaloguj się</string>
    <string name="logtores_no">Anuluj</string>
    
    <string name="begin_d">Termin:</string>
    <string name="track_d">Tor:</string>
    <string name="user_d">Użytkownik:</string>
    <string name="own_d">Na wyłączność:</string>
    <string name="reserve">Rezerwuj</string>
    <string name="places">Miejsca:</string>
    <string name="cancel">Anuluj</string>
    <string name="you_have_reservation">Masz już rezerwacje w tym terminie. Przejdź do:</string>
    <string name="goto_reservation">Moje Rezerwacje &gt;</string>
    
    <string name="open">Czynne</string>
    <string name="close">Nieczynne</string>
    <string name="past">Dni przeszłe</string>
    
    <string name="empty">Puste</string>
    <string name="full">Brak miejsc</string>
    <string name="available">Są miejsca</string>
    <string name="myres">Własna Rezerwacja</string>
    
    <string-array name="prices_desc">
        <item>Typ</item>
        <item>Taryfa</item>
        <item>Cena</item>
    </string-array>
    
    <string-array name="menu_names">
        <item>Aktualności</item>
        <item>Galeria</item>
        <item>Cennik</item>
        <item>Rezerwacje</item>
        <item>Kontakt</item>
        <item>Zaloguj</item>
    </string-array>
    
    <string-array name="months">
        <item>Styczeń</item>
        <item>Luty</item>
        <item>Marzec</item>
        <item>Kwiecień</item>
        <item>Maj</item>
        <item>Czerwiec</item>
        <item>Lipiec</item>
        <item>Sierpień</item>
        <item>Wrzesień</item>
        <item>Pazdziernik</item>
        <item>Listopad</item>
        <item>Grudzień</item>
    </string-array>
    
    <string-array name="gallery_descriptions">
        <item>Nasz basen sportowy z wspaniałym widokiem za oknem.</item>
        <item>Basen sportowo-rekreacyjny dla początkujących.</item>
        <item>Kompleks relaksacyjny z jacuzzi oraz barem.</item>
        <item>Sala do wynajęcia na prywatne imprezy.</item>
    </string-array>
    
    <string name="hello">Witaj</string>
    <string name="login_btn">Zaloguj</string>
    <string name="register_btn">Zarejestruj</string>
    <string name="logout_btn">Wyloguj</string>
    <string name="noval">brak</string>
    <string name="email_addr">E-mail</string>
    <string name="passw">Hasło</string>
    <string name="passw2">Powtórz hasło</string>
    <string name="name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="phone">Numer telefonu</string>
    <string name="birth">Data urodzenia</string>
    <string name="register_info">Nie masz konta? Zarejestruj się!</string>
    <string name="login_info">Masz już konto? Zaloguj się!</string>
    
    <string name="obligatory_field">To pole jest wymagane</string>
    <string name="wrong_mail">Podany E-mail jest już zarejestrowany</string>
    <string name="wrong_mail2">Podano błędny adres e-mail</string>
    <string name="wrong_pass">Hasła nie zgadzają się</string>
    <string name="wrong_pass2">Hasło powinno składać się z minimum 8 znaków</string>
    <string name="wrong_tel">Numer telefonu powinien zawierać od 7 do 15 cyfr</string>
    <string name="wrong_tel2">Numer telefonu może zawierać tylko cyfry</string>
    
    <string name="contact_addr">Bulwar Słoneczny,\n57&#8211;257 Wrocław\n\nGodziny otwarcia:</string><!-- \npon&#8211;pt: 8:00&#8211;20:00\nsob&#8211;nie: 10:00&#8211;18:00 -->
    <string name="call">888&#8211;021&#8211;123</string>
 	<string name="navigate">Nawiguj do Nas</string>   
    <string name="mail">kontakt@delfinek.pl</string>
    <string name="contact"></string>
    
</resources>
