<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7"
        >
        <TextView 
            android:layout_margin="3dp"
            android:id="@+id/monday"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/short_monday"
            android:background="#4d4d4d"
            android:textColor="#FFFFFF"/>
        <TextView 
            android:layout_margin="2dp"
            android:id="@+id/tuesday"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/short_tuesday"
            android:background="#4d4d4d"
            android:textColor="#FFFFFF"/>
        <TextView 
            android:layout_margin="2dp"
            android:id="@+id/wensday"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/short_wensday"
            android:background="#4d4d4d"
            android:textColor="#FFFFFF"/>
        <TextView
             android:layout_margin="2dp" 
            android:id="@+id/thursday"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/short_thursday"
            android:background="#4d4d4d"
            android:textColor="#FFFFFF"/>
        <TextView 
             android:layout_margin="2dp"
            android:id="@+id/friday"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/short_friday"
            android:background="#4d4d4d"
            android:textColor="#FFFFFF"/>
        <TextView
             android:layout_margin="2dp" 
            android:id="@+id/saturday"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/short_saturday"
            android:background="#4d4d4d"
            android:textColor="#FFFFFF"/>
        <TextView 
             android:layout_margin="2dp"
            android:id="@+id/sunday"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/short_sunday"
            android:background="#4d4d4d"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
