<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
        xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" 
	    android:background="@color/layout_backgroud"
	    >
	    <LinearLayout
	        android:id="@+id/register_form" 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:background="@android:drawable/dialog_holo_light_frame"
	        android:padding="20dp">
	        
	        <TextView
				android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/email_addr"/>
	        <TextView
	            android:id="@+id/wrong_mail"
	            android:visibility="gone"
				android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#F00"
                android:text="@string/wrong_mail2"/>
            <EditText 
                android:id="@+id/email_val"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"
                android:inputType="textEmailAddress"/>
       			
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/passw"/>
             <TextView
                android:id="@+id/wrong_passw"
                android:visibility="gone"
				android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#F00"
                android:text="@string/wrong_pass2"/>
            <EditText 
                android:id="@+id/passw_val"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"
                android:inputType="textPassword"/>
            
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/passw2"/>
            <TextView
                android:id="@+id/wrong_passw2"
                android:visibility="gone"
				android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#F00"
                android:text="@string/wrong_pass"/>
            <EditText
                android:id="@+id/passw2_val"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:inputType="textPassword" >
            </EditText>
            
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/name"/>
            <TextView
                android:id="@+id/wrong_name"
                android:visibility="gone"
				android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#F00"
                android:text="@string/obligatory_field"/>
            <EditText 
                android:id="@+id/name_val"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:inputType="textPersonName"
                android:singleLine="true"/>
            
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/surname"/>
            <TextView
                android:id="@+id/wrong_surn"
                android:visibility="gone"
				android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#F00"
                android:text="@string/obligatory_field"/>
            <EditText 
                android:id="@+id/surname_val"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:inputType="textPersonName"
                android:singleLine="true"/>
          
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/phone"/>
            <TextView
                android:id="@+id/wrong_phone"
                android:visibility="gone"
				android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#F00"
                android:text="@string/wrong_tel2"/>
            <EditText
                android:id="@+id/phone_val" 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:inputType="phone"
                android:singleLine="true"/>
          
            <Button 
                android:id="@+id/btnRegister"
                android:background="@android:drawable/alert_light_frame"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/register_btn"/>
           <TextView 
                android:id="@+id/link_to_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:layout_marginBottom="40dip"
                android:text="@string/login_info"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="#0b84aa"/>
          
        </LinearLayout>
</ScrollView>
