<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:padding="30dp"
    android:layout_gravity="center"
    android:gravity="center">
    
    <TableRow >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:gravity="right"
            android:paddingRight="5dp"
            android:textSize="17sp"
            android:textStyle="bold"
            android:text="@string/places"/>
        <TextView 
            android:id="@+id/places_val"
            android:layout_width="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textColor="#000"/>
    </TableRow>
    <TableRow >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:gravity="right"
            android:textSize="17sp"
            android:paddingRight="5dp"
            android:textStyle="bold"
            android:text="@string/begin_d"/>
        <TextView 
            android:id="@+id/begin_val"
            android:layout_width="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textColor="#000"/>
    </TableRow>
    <TableRow >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:gravity="right"
            android:textSize="17sp"
            android:paddingRight="5dp"
            android:textStyle="bold"
            android:text="@string/track_d"/>
        <TextView 
            android:id="@+id/track_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="17sp"
            android:textStyle="bold"/>
    </TableRow>
    <TableRow >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:gravity="right"
            android:textSize="17sp"
            android:paddingRight="5dp"
            android:textStyle="bold"
            android:text="@string/user_d"/>
        <TextView 
            android:id="@+id/user_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="17sp"
            android:textStyle="bold"/>
    </TableRow>
    <TableRow >
    	<CheckBox 
    	    android:id="@+id/own_check"
    	    android:visibility="invisible"
    	   android:layout_span="2"
    	   android:gravity="center"
    	   android:textSize="17sp"
            android:textStyle="bold"
    	   android:layout_width="wrap_content"
    	   android:layout_height="wrap_content"
    	   android:text="@string/own_d"/>    
    </TableRow>
    
    <TableRow>
        <Button 
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="17sp"
            android:paddingRight="5dp"
            android:textStyle="bold"
             android:background="@android:drawable/alert_light_frame"
            android:text="@string/cancel"/>
        <Button 
            android:id="@+id/reserve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/alert_light_frame"
            android:textSize="17sp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/reserve"/>
    </TableRow>
    
    <TableRow>
        <Button 
            android:id="@+id/youhaveres1"
            android:paddingTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_span="2"
            android:background="#0000"
            android:textSize="17sp"
            android:textStyle="bold"
            android:visibility="gone"
            android:text="@string/you_have_reservation"/>
    </TableRow>
    <TableRow>
        <Button 
            android:id="@+id/youhaveres2"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_span="2"
            android:background="#0000"
            android:textSize="17sp"
            android:textStyle="bold"
            android:text="@string/goto_reservation"
            android:textColor="#0b84aa"/>
    </TableRow>

</TableLayout>
