<?xml version="1.0" encoding="utf-8"?>

	    <RelativeLayout 
	        xmlns:android="http://schemas.android.com/apk/res/android"
	        android:background="@color/layout_backgroud"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        >
	    <TableLayout 
	        android:id="@+id/logout_form"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@android:drawable/dialog_holo_light_frame"
	        android:padding="20dp"
	        >
	         <TableRow 
	            android:layout_width="match_parent"
	            android:layout_gravity="center"
	            android:gravity="center"
	            android:paddingBottom="15dp"
	            >
	             <TextView 
	                 android:id="@+id/hello_view"
	                 android:layout_width="wrap_content"
	                 android:layout_height="wrap_content"
	                 android:text="@string/hello"
	                 android:textSize="26sp"
	                 android:textStyle="bold"/>
	         </TableRow>
	        <TableRow >
	            <TextView
	                android:id="@+id/email_lab"
	                android:textColor="#372c24"
	                 android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
	                android:text="@string/email_addr"
	                android:paddingRight="10dp"/>
	            
	            <TextView
	                android:id="@+id/email_val"
	                android:textColor="#372c24"
                 	android:layout_width="wrap_content"
              		android:layout_height="wrap_content"
	                android:text="@string/noval"/>
	        </TableRow>
	        <TableRow >
	            <TextView
	                android:id="@+id/name_lab"
	                android:textColor="#372c24"
	                android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
	                android:text="@string/name"
	                android:paddingRight="10dp"/>
	            
	            <TextView
	                android:id="@+id/name_val"
	                android:textColor="#372c24"
	                android:layout_width="wrap_content"
               		android:layout_height="wrap_content"
	                android:text="@string/noval"/>
	        </TableRow>
	        <TableRow >
	            <TextView
	                android:id="@+id/surname_lab"
	                android:textColor="#372c24"
	                android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
	                android:text="@string/surname"
	                android:paddingRight="10dp"/>
	            
	            <TextView
	                android:id="@+id/surname_val"
	                android:textColor="#372c24"
	                android:layout_width="wrap_content"
               		android:layout_height="wrap_content"
	                android:text="@string/noval"/>
	        </TableRow>
	        <TableRow >
	            <TextView
	                android:id="@+id/phone_lab"
	                android:textColor="#372c24"
	                android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
	                android:text="@string/phone"
	                android:paddingRight="10dp"/>
	            
	            <TextView
	                android:id="@+id/phone_val"
	                android:textColor="#372c24"
	                android:layout_width="wrap_content"
               		android:layout_height="wrap_content"
	                android:text="@string/noval"/>
	        </TableRow>
	        
	        <TableRow 
	            android:layout_width="match_parent"
	            android:layout_gravity="center"
	            android:gravity="center"
	            >
	            <Button
	                android:id="@+id/logout_btn"
	           		android:layout_marginTop="10dip"
	           		android:background="@android:drawable/alert_light_frame"
	           	    android:layout_width="match_parent"
	           	    android:layout_height="wrap_content"
	           	    android:layout_span="2"
	           	    android:text="@string/logout_btn"/>
	        </TableRow>
	    </TableLayout>
	    <LinearLayout
	        android:background="@color/layout_backgroud" 
	        android:layout_below="@+id/logout_form"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
	        <TextView
		             android:layout_width="match_parent"
		             android:layout_height="40dp" 
		             android:gravity="center"
		             android:text="@string/myRes"
		             android:textColor="#FFF"
		              android:background="#4d4d4d"/>
	       <LinearLayout
	            android:background="@color/layout_backgroud"
		        android:layout_width="match_parent"
		        android:layout_height="40dp"
		        android:orientation="horizontal"
		        android:weightSum="7"
		        android:divider="@drawable/calendar_vertical_divider"
		        android:showDividers="middle"
		        >

		         <TextView
		             android:layout_weight="1"
		             android:layout_width="0dp"
		             android:layout_height="match_parent"
		             android:gravity="center"
		             android:text="@string/track"
		             android:textColor="#FFF"
		              android:background="#4d4d4d"/>
		         <TextView
		             android:id="@+id/month"
		             android:layout_weight="3"
		             android:layout_width="0dp"
		             android:layout_height="match_parent"
		             android:gravity="center"
		              android:background="#4d4d4d"
		              android:text="@string/Date"
		            android:textColor="#FFFFFF"
		              />
		         <TextView
		             android:textColor="#FFF"
		              android:background="#4d4d4d"
		             android:layout_weight="2"
		             android:layout_width="0dp"
		             android:text="@string/own"
		             android:layout_height="match_parent" 
		             android:gravity="center"
		             />
		         <TextView
		             android:textColor="#FFF"
		              android:background="#4d4d4d"
		             android:layout_weight="1"
		             android:layout_width="0dp"
		             android:layout_height="match_parent"
		             android:gravity="center"
		             />
		     </LinearLayout>
		     <ListView 
		         android:background="@color/layout_backgroud"
		         android:dividerHeight="1dp"
		         android:divider="#9FFF"
		         android:id="@+id/myReservationList"
		         android:layout_width="match_parent"
		         android:layout_height="wrap_content"
		         />
	    </LinearLayout>
	    
	    </RelativeLayout>
