<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:drawable/dialog_holo_light_frame"
    android:layout_margin="5dp"
    android:padding="5dp">
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/sample_title"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="#000000"
        />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/sample_news"
        android:textStyle="normal"
        android:textSize="20sp"
        android:textColor="#000000"
         />
    
     <TextView
         android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/sample_data"
        android:textStyle="normal"
        android:textSize="16sp"
        android:textColor="#000000"
         />

</LinearLayout>
